# office-backend-v3

./: Procfile  db.sqlite3  main.py  pyproject.toml  requirements.txt
data/: users.json
database/config/: config.py  db.py
database/schemas/: schemas.py
uploads/: cloudinary.py
