[tool.poetry]
name = "backend-v3"
version = "0.1.0"
description = "Enetworks office platform coe"
authors = ["aldorax <climaxating@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
cloudinary = "^1.40.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
